Fix z-index

--- a/src/components/Core/Core.scss
+++ b/src/components/Core/Core.scss
@@ -233,7 +233,7 @@ footer.footer {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 10;
+  z-index: 0;
   max-width: none;
 
   // alerts
