--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -129,7 +129,15 @@
 }
 
 .dropdown-menu {
-  z-index: 100;
+
+  &.show {
+    left: auto !important;
+    right: 10px;
+    top: 64px !important;
+    position: fixed !important;
+    transform: none !important;
+    z-index: 10;
+  }
 }
 
 @media (max-width: 550px) {
